--- a/ProCSSmart/src/main/resources/com/example/procssmart/View/main-view.fxml
+++ b/ProCSSmart/src/main/resources/com/example/procssmart/View/main-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -16,7 +17,7 @@
 
 <AnchorPane prefHeight="642.0" prefWidth="909.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.procssmart.View.ControlMainView">
    <children>
-      <TableView fx:id="tableData" editable="true" layoutX="100.0" layoutY="80.0" prefHeight="294.0" prefWidth="301.0">
+      <TableView fx:id="tableData" editable="true" layoutX="177.0" layoutY="54.0" prefHeight="294.0" prefWidth="301.0">
          <columns>
             <TableColumn fx:id="content" prefWidth="75.0" text="Content" />
             <TableColumn fx:id="value" prefWidth="75.0" text="Value" />
@@ -24,8 +25,8 @@
             <TableColumn fx:id="type" prefWidth="75.0" text="Type" />
          </columns>
       </TableView>
-      <Button fx:id="showAddLayoutButton" layoutX="282.0" layoutY="474.0" mnemonicParsing="false" onAction="#showAddLayout" prefHeight="61.0" prefWidth="98.0" text="Thêm" />
-      <GridPane fx:id="layoutAddMoney" layoutX="432.0" layoutY="390.0" prefHeight="242.0" prefWidth="463.0" visible="false">
+      <Button fx:id="showAddLayoutButton" layoutX="235.0" layoutY="460.0" mnemonicParsing="false" onAction="#showAddLayout" prefHeight="44.0" prefWidth="72.0" text="Thêm" />
+      <GridPane fx:id="layoutAddMoney" layoutX="405.0" layoutY="361.0" prefHeight="242.0" prefWidth="463.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.39996337890625" minWidth="10.0" prefWidth="77.19992065429688" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.8000793457031" minWidth="10.0" prefWidth="428.8000793457031" />
@@ -64,5 +65,6 @@
             </HBox>
          </children>
       </GridPane>
+      <FontAwesomeIconView layoutX="576.0" layoutY="139.0" size="30" wrappingWidth="11.20001220703125" />
    </children>
 </AnchorPane>
