--- a/ProCSSmart/src/main/resources/com/example/procssmart/View/report-view.fxml
+++ b/ProCSSmart/src/main/resources/com/example/procssmart/View/report-view.fxml
@@ -3,24 +3,16 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="642.0" prefWidth="948.0" style="-fx-background-color: #cfcfcf;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.procssmart.View.ControlMainView">
+
+<AnchorPane prefHeight="650.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.procssmart.View.ControlReportView">
    <children>
-      <TableView fx:id="tableData" editable="true" layoutX="177.0" layoutY="63.0" prefHeight="502.0" prefWidth="563.0">
-         <columns>
-            <TableColumn fx:id="content" prefWidth="178.3999481201172" text="Content" />
-            <TableColumn fx:id="value" prefWidth="100.800048828125" text="Value" />
-            <TableColumn fx:id="date" prefWidth="108.0" text="Date" />
-            <TableColumn fx:id="type" prefWidth="176.0" text="Type" />
-         </columns>
-      </TableView>
-      <VBox prefHeight="642.0" prefWidth="130.0" style="-fx-background-color: #ffff;">
+      <VBox layoutY="4.0" prefHeight="650.0" prefWidth="130.0" style="-fx-background-color: #ffff;">
          <children>
             <Label prefHeight="110.0" prefWidth="127.0">
                <graphic>
@@ -64,5 +56,32 @@
             </Button>
          </children>
       </VBox>
+      <Label layoutX="166.0" layoutY="14.0" prefHeight="139.0" prefWidth="250.0" text="REPORT">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <ChoiceBox fx:id="chooseMonth" layoutX="265.0" layoutY="129.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="chooseYear" layoutX="665.0" layoutY="127.0" prefWidth="150.0" />
+      <Label layoutX="201.0" layoutY="131.0" text="Month:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="620.0" layoutY="131.0" text="Year:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Button fx:id="buttonApply" layoutX="475.0" layoutY="171.0" mnemonicParsing="false" text="Apply" />
+      <AnchorPane layoutX="201.0" layoutY="228.0" prefHeight="379.0" prefWidth="507.0">
+         <children>
+            <Label layoutY="1.0" text="Báo cáo tài chính:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
