--- a/ProCSSmart/src/main/resources/com/example/procssmart/View/payment-view.fxml
+++ b/ProCSSmart/src/main/resources/com/example/procssmart/View/payment-view.fxml
@@ -13,68 +13,25 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="642.0" prefWidth="948.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.procssmart.View.ControlPaymentView">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="790.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.procssmart.View.ControlPaymentView">
    <children>
-      <VBox layoutY="5.0" prefHeight="642.0" prefWidth="130.0" style="-fx-background-color: #ffff;">
-         <children>
-            <Label prefHeight="110.0" prefWidth="127.0">
-               <graphic>
-                  <FontAwesomeIconView glyphName="BARS" size="25" text="" wrappingWidth="8.628583908081055" />
-               </graphic>
-               <padding>
-                  <Insets left="20.0" />
-               </padding>
-            </Label>
-            <Button fx:id="buttonHome" mnemonicParsing="false" onAction="#sceneHome" prefHeight="80.0" prefWidth="130.0" style="-fx-background-color: #ffff;" text="Home">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <graphic>
-                  <FontAwesomeIconView glyphName="HOME" size="20" />
-               </graphic>
-            </Button>
-            <Button fx:id="buttonIncome" mnemonicParsing="false" onAction="#sceneIncome" prefHeight="80.0" prefWidth="130.0" style="-fx-background-color: #ffff;" text="Income">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <graphic>
-                  <FontAwesomeIconView glyphName="CHECK" />
-               </graphic>
-            </Button>
-            <Button fx:id="buttonPayment" mnemonicParsing="false" onAction="#scenePayment" prefHeight="80.0" prefWidth="130.0" style="-fx-background-color: #ffff;" text="Payment">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <graphic>
-                  <FontAwesomeIconView glyphName="DOLLAR" />
-               </graphic>
-            </Button>
-            <Button fx:id="buttonReport" mnemonicParsing="false" onAction="#sceneReport" prefHeight="80.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Report">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <graphic>
-                  <FontAwesomeIconView glyphName="BOOK" />
-               </graphic>
-            </Button>
-         </children>
-      </VBox>
-      <TableView fx:id="tableData" editable="true" layoutX="197.0" layoutY="83.0" onMouseClicked="#rowClicked" prefHeight="442.0" prefWidth="400.0">
+      <TableView fx:id="tableData" editable="true" layoutX="174.0" layoutY="237.0" onMouseClicked="#rowClicked" prefHeight="400.0" prefWidth="600.0" stylesheets="@styling.css">
          <columns>
-            <TableColumn fx:id="content" prefWidth="115.99996948242188" text="Content" />
-            <TableColumn fx:id="value" prefWidth="76.00007629394531" text="Value" />
-            <TableColumn fx:id="date" prefWidth="95.20001220703125" text="Date" />
-            <TableColumn fx:id="type" prefWidth="106.39996337890625" text="Type" />
+            <TableColumn fx:id="content" prefWidth="194.40003967285156" text="Content" />
+            <TableColumn fx:id="value" prefWidth="157.5999755859375" text="Value" />
+            <TableColumn fx:id="date" prefWidth="127.20001220703125" text="Date" />
+            <TableColumn fx:id="type" prefWidth="120.800048828125" text="Type" />
          </columns>
       </TableView>
-      <GridPane fx:id="layoutAddMoney" layoutX="490.0" layoutY="350.0" prefHeight="231.0" prefWidth="454.0" style="-fx-background-color: white; -fx-border-color: red;" visible="false">
+      <GridPane fx:id="layoutAddMoney" layoutX="200.0" layoutY="270.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="230.0" prefWidth="450.0" style="-fx-background-color: white; -fx-border-color: #503684;" visible="false">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.39996337890625" minWidth="50.0" prefWidth="77.19992065429688" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.8000793457031" minWidth="10.0" prefWidth="428.8000793457031" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.39996337890625" minWidth="50.0" prefWidth="60.8000244140625" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.8000793457031" minWidth="10.0" prefWidth="388.1999755859375" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints maxHeight="49.60001220703125" minHeight="10.0" prefHeight="48.000006103515624" vgrow="SOMETIMES" />
@@ -85,10 +42,10 @@
             <RowConstraints maxHeight="125.59998168945313" minHeight="0.0" prefHeight="48.20001831054688" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Label text=" Content" GridPane.rowIndex="1" />
-            <Label text=" Type" GridPane.rowIndex="4" />
-            <Label text=" Value" GridPane.rowIndex="3" />
-            <Label text=" Date" GridPane.rowIndex="2" />
+            <Label text=" Content" textFill="#503684" GridPane.rowIndex="1" />
+            <Label text=" Type" textFill="#503684" GridPane.rowIndex="4" />
+            <Label text=" Value" textFill="#503684" GridPane.rowIndex="3" />
+            <Label text=" Date" textFill="#503684" GridPane.rowIndex="2" />
             <TextField fx:id="textContent" prefHeight="26.0" prefWidth="225.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
@@ -106,15 +63,18 @@
             </DatePicker>
             <HBox prefHeight="41.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <RadioButton fx:id="type1" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Tiền phòng" />
-                  <RadioButton fx:id="type2" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Mua đồ dùng" />
-                  <RadioButton fx:id="type3" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" text="Chi tiêu sự kiện" />
-                  <RadioButton fx:id="type4" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Khác" />
+                  <RadioButton fx:id="type1" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Tiền phòng" textFill="#503684" />
+                  <RadioButton fx:id="type2" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Mua đồ dùng" textFill="#503684" />
+                  <RadioButton fx:id="type3" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" text="Chi tiêu sự kiện" textFill="#503684" />
+                  <RadioButton fx:id="type4" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Khác" textFill="#503684" />
                </children>
             </HBox>
             <HBox prefHeight="34.0" prefWidth="405.0" spacing="20.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <Button fx:id="addNewMoneyButton" mnemonicParsing="false" onAction="#addMoney" prefHeight="36.0" prefWidth="48.0" text="Add" />
+                  <Button fx:id="addNewMoneyButton" mnemonicParsing="false" onAction="#addMoney" prefHeight="36.0" prefWidth="48.0" styleClass="button2" stylesheets="@styling.css" text="Add" textFill="WHITE">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Button>
                   <Label fx:id="labelSuccessful" prefHeight="34.0" prefWidth="166.0" />
                </children>
                <GridPane.margin>
@@ -123,18 +83,27 @@
             </HBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Label layoutX="14.0" layoutY="5.0" prefHeight="36.0" prefWidth="115.0" text="Add Payment">
+                  <Label layoutX="14.0" layoutY="5.0" prefHeight="36.0" prefWidth="115.0" text="Add Payment" textFill="#503684">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Button fx:id="buttonXAdd" layoutX="379.0" mnemonicParsing="false" onAction="#DisableAdd" text="X" />
+                  <Button fx:id="buttonXAdd" layoutX="362.0" mnemonicParsing="false" onAction="#DisableAdd">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="CLOSE" />
+                     </graphic></Button>
                </children>
             </AnchorPane>
          </children>
       </GridPane>
-      <Button fx:id="buttonAdd" layoutX="368.0" layoutY="534.0" mnemonicParsing="false" onAction="#VisibleAdd" prefHeight="35.0" prefWidth="56.0" text="Add" />
-      <GridPane fx:id="layoutFixMoney" layoutX="490.0" layoutY="350.0" prefHeight="231.0" prefWidth="454.0" style="-fx-background-color: white; -fx-border-color: red;" visible="false">
+      <Button fx:id="buttonAdd" layoutX="174.0" layoutY="204.0" mnemonicParsing="false" onAction="#VisibleAdd" prefHeight="26.0" prefWidth="214.0" styleClass="button2" stylesheets="@styling.css" text="Thêm" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+         <graphic>
+            <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
+         </graphic></Button>
+      <GridPane fx:id="layoutFixMoney" layoutX="200.0" layoutY="270.0" prefHeight="230.0" prefWidth="450.0" style="-fx-background-color: white; -fx-border-color: #503684;" visible="false">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.39996337890625" minWidth="50.0" prefWidth="77.19992065429688" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.8000793457031" minWidth="10.0" prefWidth="428.8000793457031" />
@@ -148,10 +117,10 @@
             <RowConstraints maxHeight="125.59998168945313" minHeight="0.0" prefHeight="48.20001831054688" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Label text=" Content" GridPane.rowIndex="1" />
-            <Label text=" Type" GridPane.rowIndex="4" />
-            <Label text=" Value" GridPane.rowIndex="3" />
-            <Label text=" Date" GridPane.rowIndex="2" />
+            <Label text=" Content" textFill="#503684" GridPane.rowIndex="1" />
+            <Label text=" Type" textFill="#503684" GridPane.rowIndex="4" />
+            <Label text=" Value" textFill="#503684" GridPane.rowIndex="3" />
+            <Label text=" Date" textFill="#503684" GridPane.rowIndex="2" />
             <TextField fx:id="fixContent" prefHeight="26.0" prefWidth="225.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
@@ -169,16 +138,22 @@
             </DatePicker>
             <HBox prefHeight="41.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <RadioButton fx:id="type11" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Tiền phòng" />
-                  <RadioButton fx:id="type21" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Mua đồ dùng" />
-                  <RadioButton fx:id="type31" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" text="Chi tiêu sự kiện" />
-                  <RadioButton fx:id="type41" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Khác" />
+                  <RadioButton fx:id="type11" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Tiền phòng" textFill="#503684" />
+                  <RadioButton fx:id="type21" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Mua đồ dùng" textFill="#503684" />
+                  <RadioButton fx:id="type31" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" text="Chi tiêu sự kiện" textFill="#503684" />
+                  <RadioButton fx:id="type41" mnemonicParsing="false" prefHeight="35.0" prefWidth="110.0" text="Khác" textFill="#503684" />
                </children>
             </HBox>
             <HBox prefHeight="34.0" prefWidth="405.0" spacing="20.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <Button fx:id="buttonSubmit" mnemonicParsing="false" onAction="#fixMoney" prefHeight="36.0" prefWidth="68.0" text="Submit" />
-                  <Button fx:id="buttonDelete" mnemonicParsing="false" onAction="#DeleteMoney" prefHeight="36.0" prefWidth="72.0" text="Delete" />
+                  <Button fx:id="buttonSubmit" mnemonicParsing="false" onAction="#fixMoney" prefHeight="36.0" prefWidth="68.0" styleClass="button2" stylesheets="@styling.css" text="Submit" textFill="WHITE">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Button>
+                  <Button fx:id="buttonDelete" mnemonicParsing="false" onAction="#DeleteMoney" prefHeight="36.0" prefWidth="72.0" styleClass="button2" stylesheets="@styling.css" text="Delete" textFill="WHITE">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Button>
                </children>
                <GridPane.margin>
                   <Insets />
@@ -186,15 +161,71 @@
             </HBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Label layoutX="14.0" layoutY="5.0" prefHeight="36.0" prefWidth="115.0" text="Fix Payment">
+                  <Label layoutX="14.0" layoutY="5.0" prefHeight="36.0" prefWidth="115.0" text="Fix Payment" textFill="#503684">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Button fx:id="buttonXFix" layoutX="379.0" mnemonicParsing="false" onAction="#DisableFix" text="X" />
+                  <Button fx:id="buttonXFix" layoutX="372.0" mnemonicParsing="false" onAction="#DisableFix">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="CLOSE" />
+                     </graphic></Button>
                </children>
             </AnchorPane>
          </children>
       </GridPane>
+      <VBox prefHeight="645.0" prefWidth="161.0" style="-fx-background-color: #3F2B63;">
+         <children>
+            <Label prefHeight="110.0" prefWidth="150.0">
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="BARS" size="25" text="" wrappingWidth="8.628583908081055" />
+               </graphic>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </Label>
+            <Button fx:id="buttonHome1" mnemonicParsing="false" onAction="#sceneHome" prefHeight="75.0" prefWidth="162.0" styleClass="button1" stylesheets="@styling.css" text="Home" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="HOME" size="20" text="" />
+               </graphic>
+            </Button>
+            <Button fx:id="buttonIncome1" mnemonicParsing="false" onAction="#sceneIncome" prefHeight="75.0" prefWidth="162.0" styleClass="button1" stylesheets="@styling.css" text="Income" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="CHECK" />
+               </graphic>
+            </Button>
+            <Button fx:id="buttonPayment1" mnemonicParsing="false" onAction="#scenePayment" prefHeight="75.0" prefWidth="162.0" styleClass="button1" stylesheets="@styling.css" text="Payment" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="DOLLAR" />
+               </graphic>
+            </Button>
+            <Button fx:id="buttonReport1" mnemonicParsing="false" onAction="#sceneReport" prefHeight="75.0" prefWidth="162.0" styleClass="button1" stylesheets="@styling.css" text="Report" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <graphic>
+                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" />
+               </graphic>
+            </Button>
+         </children>
+      </VBox>
+      <Pane layoutX="161.0" layoutY="62.0" prefHeight="130.0" prefWidth="630.0" style="-fx-background-color: #7156DD;">
+         <children>
+            <Label layoutX="38.0" layoutY="45.0" prefHeight="45.0" prefWidth="383.0" text="Khoản chi" textFill="#fcfcfc">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
