--- a/ProCSSmart/src/main/resources/com/example/procssmart/View/report-view.fxml
+++ b/ProCSSmart/src/main/resources/com/example/procssmart/View/report-view.fxml
@@ -5,83 +5,106 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="650.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.procssmart.View.ControlReportView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="790.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.procssmart.View.ControlReportView">
    <children>
-      <VBox layoutY="4.0" prefHeight="650.0" prefWidth="130.0" style="-fx-background-color: #ffff;">
+      <ChoiceBox fx:id="chooseMonth" layoutX="257.0" layoutY="208.0" prefWidth="150.0" stylesheets="@styling.css" />
+      <ChoiceBox fx:id="chooseYear" layoutX="550.0" layoutY="208.0" prefWidth="150.0" stylesheets="@styling.css" />
+      <Label layoutX="194.0" layoutY="210.0" text="Month:" textFill="#503684">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="489.0" layoutY="210.0" text="Year:" textFill="#503684">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Button fx:id="buttonApply" layoutX="424.0" layoutY="245.0" mnemonicParsing="false" onAction="#VisibleReport" styleClass="button2" stylesheets="@styling.css" text="Apply" textFill="WHITE">
+         <font>
+            <Font size="13.0" />
+         </font></Button>
+      <AnchorPane layoutX="173.0" layoutY="286.0" prefHeight="351.0" prefWidth="603.0">
          <children>
-            <Label prefHeight="110.0" prefWidth="127.0">
+            <Label layoutX="14.0" layoutY="14.0" text="Tiền vào" textFill="#503684">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="177.0" text="Tiền ra" textFill="#503684">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="textIncome" layoutX="14.0" layoutY="45.0" prefHeight="122.0" prefWidth="531.0">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </TextArea>
+            <TextArea fx:id="textPayment" layoutX="14.0" layoutY="205.0" prefHeight="139.0" prefWidth="531.0">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </TextArea>
+         </children>
+      </AnchorPane>
+      <VBox prefHeight="645.0" prefWidth="161.0" style="-fx-background-color: #3F2B63;">
+         <children>
+            <Label prefHeight="110.0" prefWidth="150.0">
                <graphic>
-                  <FontAwesomeIconView glyphName="BARS" size="25" text="" wrappingWidth="8.628583908081055" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="BARS" size="25" text="" wrappingWidth="8.628583908081055" />
                </graphic>
                <padding>
                   <Insets left="20.0" />
                </padding>
             </Label>
-            <Button fx:id="buttonHome" mnemonicParsing="false" onAction="#sceneHome" prefHeight="80.0" prefWidth="130.0" style="-fx-background-color: #ffff;" text="Home">
+            <Button fx:id="buttonHome1" mnemonicParsing="false" onAction="#sceneHome" prefHeight="75.0" prefWidth="162.0" styleClass="button1" stylesheets="@styling.css" text="Home" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView glyphName="HOME" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="HOME" size="20" text="" />
                </graphic>
             </Button>
-            <Button fx:id="buttonIncome" mnemonicParsing="false" onAction="#sceneIncome" prefHeight="80.0" prefWidth="130.0" style="-fx-background-color: #ffff;" text="Income">
+            <Button fx:id="buttonIncome1" mnemonicParsing="false" onAction="#sceneIncome" prefHeight="75.0" prefWidth="162.0" styleClass="button1" stylesheets="@styling.css" text="Income" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView glyphName="CHECK" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="CHECK" />
                </graphic>
             </Button>
-            <Button fx:id="buttonPayment" mnemonicParsing="false" onAction="#scenePayment" prefHeight="80.0" prefWidth="130.0" style="-fx-background-color: #ffff;" text="Payment">
+            <Button fx:id="buttonPayment1" mnemonicParsing="false" onAction="#scenePayment" prefHeight="75.0" prefWidth="162.0" styleClass="button1" stylesheets="@styling.css" text="Payment" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font name="System Bold" size="15.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView glyphName="DOLLAR" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="DOLLAR" />
                </graphic>
             </Button>
-            <Button fx:id="buttonReport" mnemonicParsing="false" onAction="#sceneReport" prefHeight="80.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Report">
+            <Button fx:id="buttonReport1" mnemonicParsing="false" onAction="#sceneReport" prefHeight="75.0" prefWidth="162.0" styleClass="button1" stylesheets="@styling.css" text="Report" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
                <graphic>
-                  <FontAwesomeIconView glyphName="BOOK" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" />
                </graphic>
             </Button>
          </children>
       </VBox>
-      <Label layoutX="166.0" layoutY="14.0" prefHeight="139.0" prefWidth="250.0" text="REPORT">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <ChoiceBox fx:id="chooseMonth" layoutX="265.0" layoutY="129.0" prefWidth="150.0" />
-      <ChoiceBox fx:id="chooseYear" layoutX="665.0" layoutY="127.0" prefWidth="150.0" />
-      <Label layoutX="201.0" layoutY="131.0" text="Month:">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <Label layoutX="620.0" layoutY="131.0" text="Year:">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <Button fx:id="buttonApply" layoutX="475.0" layoutY="171.0" mnemonicParsing="false" text="Apply" />
-      <AnchorPane layoutX="201.0" layoutY="228.0" prefHeight="379.0" prefWidth="507.0">
+      <Pane layoutX="161.0" layoutY="62.0" prefHeight="130.0" prefWidth="630.0" style="-fx-background-color: #7156DD;">
          <children>
-            <Label layoutY="1.0" text="Báo cáo tài chính:">
+            <Label layoutX="38.0" layoutY="45.0" prefHeight="45.0" prefWidth="383.0" text="Báo cáo tháng" textFill="#fcfcfc">
                <font>
-                  <Font size="17.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
          </children>
-      </AnchorPane>
+      </Pane>
    </children>
 </AnchorPane>
